[gd_scene load_steps=8 format=2]

[ext_resource path="res://pause_bg.png" type="Texture" id=1]
[ext_resource path="res://Fonts/Gugi-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Sounds/242501__gabrielaraujo__powerup-success.wav" type="AudioStream" id=3]
[ext_resource path="res://World/ConfirmWin.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 22
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 19
font_data = ExtResource( 2 )

[node name="ConfirmWin" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
modulate = Color( 0.301961, 0.160784, 0.160784, 0.423529 )
margin_left = 23.894
margin_top = 456.825
margin_right = 268.894
margin_bottom = 587.825
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 31.7601
margin_top = 468.437
margin_right = 264.76
margin_bottom = 485.437
custom_fonts/font = SubResource( 1 )
text = "Are you sure you want to buy "
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonYES" type="Button" parent="."]
modulate = Color( 0.294118, 1, 0.0666667, 1 )
margin_left = 51.2381
margin_top = 544.476
margin_right = 114.238
margin_bottom = 573.476
custom_fonts/font = SubResource( 2 )
text = "YES"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonNO" type="Button" parent="."]
modulate = Color( 1, 0.0588235, 0.0588235, 1 )
margin_left = 182.715
margin_top = 544.851
margin_right = 245.715
margin_bottom = 573.851
custom_fonts/font = SubResource( 2 )
text = "NO"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 30.0
margin_top = 249.0
margin_right = 257.0
margin_bottom = 451.0
custom_fonts/normal_font = SubResource( 3 )
text = "
Description"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ico" type="TextureRect" parent="."]
margin_left = 32.5514
margin_top = 35.9188
margin_right = 259.551
margin_bottom = 237.919
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
[connection signal="pressed" from="ButtonYES" to="." method="_on_ButtonYES_pressed"]
[connection signal="pressed" from="ButtonNO" to="." method="_on_ButtonNO_pressed"]
[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_AudioStreamPlayer2D_finished"]
